--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Destination</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="base_url">https://api.roadgoat.com/api/v2/destinations/</string>
+    <string name="base_url">https://api.tvmaze.com/search/</string>
 </resources>
