--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="base_url">https://api.tvmaze.com/search/</string>
+    <string name="bd_tmdb">База данных фильмов (TMDB) - это база данных фильмов и телепрограмм, созданная сообществом. Все данные были добавлены нашим удивительным сообществом с 2008 года. Сильная международная направленность и объем данных TMDb во многом не имеют себе равных, и мы невероятно гордимся этим. Проще говоря, мы живем и дышим сообществом, и именно это нас отличает.</string>
 </resources>
