switching fragments good

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="base_url">https://api.tvmaze.com/search/</string>
     <string name="bd_tmdb">База данных фильмов (TMDB) - это база данных фильмов и телепрограмм, созданная сообществом. Все данные были добавлены нашим удивительным сообществом с 2008 года. Сильная международная направленность и объем данных TMDb во многом не имеют себе равных, и мы невероятно гордимся этим. Проще говоря, мы живем и дышим сообществом, и именно это нас отличает.</string>
+    <string name="tmdbFirst">Ежегодно, начиная с 2008 года, количество вкладов в нашу базу данных увеличивается. Благодаря тому, что нашу платформу используют более 400 000 разработчиков и компаний, TMDB стал главным источником метаданных.</string>
+    <string name="tmdbTwo">Наряду с обширными метаданными для фильмов, телешоу и людей мы также предлагаем один из лучших наборов постеров и фан-артов с высоким разрешением. В среднем каждый день добавляется более 1000 изображений.</string>
+    <string name="tmdbThree">Мы интернациональны. Хотя мы официально поддерживаем 39 языков, у нас также есть обширные региональные данные. Ежедневно TMDB используется более чем в 180 странах.</string>
+    <string name="tmdbFour">Наше сообщество не имеет себе равных. Наши сотрудники и модераторы сообщества всегда готовы помочь. Мы стремимся к тому, чтобы ваш опыт работы с TMDB был просто потрясающим.</string>
+    <string name="tmdbFive">Надежная платформа. Ежедневно нашим сервисом пользуются миллионы людей, а мы обрабатываем более 3 миллиардов запросов. На протяжении многих лет мы доказали, что это услуга, которой можно доверять и на которую можно положиться.</string>
 </resources>
