add review and treiler

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="tmdbThree">Мы интернациональны. Хотя мы официально поддерживаем 39 языков, у нас также есть обширные региональные данные. Ежедневно TMDB используется более чем в 180 странах.</string>
     <string name="tmdbFour">Наше сообщество не имеет себе равных. Наши сотрудники и модераторы сообщества всегда готовы помочь. Мы стремимся к тому, чтобы ваш опыт работы с TMDB был просто потрясающим.</string>
     <string name="tmdbFive">Надежная платформа. Ежедневно нашим сервисом пользуются миллионы людей, а мы обрабатываем более 3 миллиардов запросов. На протяжении многих лет мы доказали, что это услуга, которой можно доверять и на которую можно положиться.</string>
+    <string name="launch_trailer">trailer</string>
 </resources>
